--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -61,6 +61,14 @@
                     <input type="text" />
                 </div>
                 <div class="inputBx">
+                    <span>... * </span>
+                    <input type="text" />
+                </div>
+                <div class="inputBx">
+                    <span>... * </span>
+                    <input type="text" />
+                </div>
+                <div class="inputBx">
                     <span>회원번호 * </span>
                     <input type="text" name="userno">
                 </div>
