--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -45,32 +45,19 @@
         </ul>
     </div>
     <div id="tab">
-        <a href="login.html"><i class="fa-solid fa-user"></i></a>
+        <a href="../login.html"><i class="fa-solid fa-user"></i></a>
         <i id="bar" class="fa-solid fa-bars"></i>
     </div>
 </section>
 
 <section id="login-area">
-
     <div class="contentBx">
         <div class="formBx">
             <h2>Sign Up</h2>
             <form action="/users/signup" name="user" method="POST">
                 <div class="inputBx">
-                    <span>... * </span>
-                    <input type="text" />
-                </div>
-                <div class="inputBx">
-                    <span>... * </span>
-                    <input type="text" />
-                </div>
-                <div class="inputBx">
-                    <span>... * </span>
-                    <input type="text" />
-                </div>
-                <div class="inputBx">
-                    <span>회원번호 * </span>
-                    <input type="text" name="userno">
+                    <span>* </span>
+                    <input type="text" >
                 </div>
                 <div class="inputBx">
                     <span>이메일 * </span>
@@ -112,7 +99,7 @@
 
 <footer class="section-p1">
     <div class="col">
-        <img class="logo" src="img/logo.png" alt="" width="100px">
+        <img class="logo" src="/img/logo.png" alt="" width="100px">
         <h4>Contact</h4>
         <p><strong>Address: </strong>나바타</p>
         <p><strong>Phone: </strong>0123456789</p>
@@ -134,6 +121,6 @@
 </footer>
 
 
-<script src="script.js"></script>
+<script src="/js/app/script.js"></script>
 </body>
 </html>
