0822 로그인 및 회원 가입 완료

--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -61,19 +61,19 @@
                 </div>
                 <div class="inputBx">
                     <span>이메일 * </span>
-                    <input type="text" name="email">
+                    <input type="text" value="{{email}}">
                 </div>
                 <div class="inputBx">
                     <span>아이디 *</span>
-                    <input type="text" name="id">
+                    <input type="text">
                 </div>
                 <div class="inputBx">
                     <span>비밀번호 *</span>
-                    <input type="text" name="password">
+                    <input type="text">
                 </div>
                 <div class="inputBx">
                     <span>이름 *</span>
-                    <input type="text" name="name">
+                    <input type="text" value="{{name}}">
                 </div>
                 <div class="inputBx">
                     <span>키 *</span>
