--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -38,30 +38,4 @@
     </div>
 </section>
 
-<footer class="section-p1">
-    <div class="col">
-        <img class="logo" src="/img/logo.png" alt="" width="100px">
-        <h4>Contact</h4>
-        <p><strong>Address: </strong>덕성여자대학교</p>
-        <p><strong>Phone: </strong>0123456789</p>
-        <p><strong>Github: </strong>git address</p>
-    </div>
-
-    <div class="col">
-        <h4>About</h4>
-        <a href="#">About us</a>
-        <a href="#">Delivery Informatiion</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms & Conditions</a>
-        <a href="#">Contact us</a>
-    </div>
-
-    <div class="copyright">
-        <p> Copyright ©  </p>
-    </div>
-</footer>
-
-
-<script src="/js/app/script.js"></script>
-</body>
-</html>
+{{>layout/footer}}
