--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Web Tutorial</title>
+    <title>NAVATAR</title>
 
     <!-- 구글 폰트 적용-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,8 +13,9 @@
 
     <!-- 아이콘 사용 링크-->
     <script src="https://kit.fontawesome.com/2a811fae19.js" crossorigin="anonymous"></script>
-    <script src="/js/app/index.js"></script>
+
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/shop.css">
 </head>
 <body>
 <section id="header">
@@ -22,30 +23,37 @@
 
     <div>
         <ul id = "navbar">
-            <li><a href="/">Home</a></li>
+            <li><a class="active" href="/">Home</a></li>
 
-            <li><a class="active">Shop</a>
+            <li><a>Shop</a>
                 <div class="sub-bar">
                     <ul>
                         <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
-                        <li><a href="/brands/apoc">A PIECE OF YOU</a></li>
-                        <li><a href="/brands/mardimercredi">MADRID</a></li>
-                        <li><a href="/brands/luvistrue">LUVISFALSE</a></li>
-                        <li><a href="/brands/lee">LEEKIM</a></li>
+                        <li><a href="/brands/apoc">A PIECE OF CAKE</a></li>
+                        <li><a href="/brands/mardimercredi">MADRI MERCREDI</a></li>
+                        <li><a href="/brands/luvistrue">LUVISTRUE</a></li>
+                        <li><a href="/brands/lee">lee</a></li>
                     </ul>
                 </div>
             </li>
 
-            <li><a href="/arfitting.html">AR Fitting</a></li>
-            <li><a href="/foryou.html">For You</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li id="loginicon"><a href="/login.html"><i class="fa-solid fa-user"></i></a></li>
-            <!-- <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li> -->
+            <li><a href="/html/arfitting.html">AR Fitting</a></li>
+            <li><a href="/html/foryou.html">For You</a></li>
+            <li><a href="/html/about.html">About</a></li>
+
+            <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
+                <div class="sub-bar2">
+                    <ul>
+                        <li><a href="/users/signin">SIGN IN</a></li>
+                        <li><a href="/users/mypage">MY PAGE</a></li>
+                    </ul>s
+                </div>
+            </li>
+
             <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
         </ul>
     </div>
     <div id="tab">
-        <a href="/login.html"><i class="fa-solid fa-user"></i></a>
         <i id="bar" class="fa-solid fa-bars"></i>
     </div>
 </section>
