--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -1,54 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Web Tutorial</title>
-
-    <!-- 구글 폰트 적용-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <!-- 아이콘 사용 링크-->
-    <script src="https://kit.fontawesome.com/2a811fae19.js" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-<section id="header">
-    <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
-
-    <div>
-        <ul id = "navbar">
-            <li><a href="/">Home</a></li>
-
-            <li><a class="active">Shop</a>
-                <div class="sub-bar">
-                    <ul>
-                        <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
-                        <li><a href="/brands/apoc">A PIECE OF YOU</a></li>
-                        <li><a href="/brands/mardimercredi">MADRID</a></li>
-                        <li><a href="/brands/luvistrue">LUVISFALSE</a></li>
-                        <li><a href="/brands/lee">LEEKIM</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li><a href="/arfitting.html">AR Fitting</a></li>
-            <li><a href="/foryou.html">For You</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li id="loginicon"><a href="/login.html"><i class="fa-solid fa-user"></i></a></li>
-            <!-- <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li> -->
-            <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
-        </ul>
-    </div>
-    <div id="tab">
-        <a href="login.html"><i class="fa-solid fa-user"></i></a>
-        <i id="bar" class="fa-solid fa-bars"></i>
-    </div>
-</section>
+{{>layout/header}}
 
 <section id="prodetails" class="section-p1">
     <div class="single-pro-image">
@@ -89,21 +39,53 @@
             </li>
         </ul>
 
-        <h4>{{product.name}}</h4>
-        <h2>{{product.normalPrice}}원</h2>
-        <p> 사이즈를 선택하세요 </p>
-        <select>
-            <option>Select Size</option>
-            {{#sizes}}
-                <option>{{size}}</option>
-            {{/sizes}}
-        </select>
-        <p> 수량 </p>
-        <input type="number" value="1">
+        <table>
+            <tbody>
+            <tr class="product_name">
+                <th scope="row"><span style="font-size:12px;color:#555555;">제품명</span></th>
+                <td><span style="font-size:12px;color:#555555;">{{product.name}}</span></td>
+            </tr>
+            <tr class="product_price">
+                <th scope="row"><span style="font-size:12px;color:#555555;">판매가</span></th>
+                <td><span style="font-size:12px;color:#555555;">{{product.normalPrice}}원</span></td>
+            </tr>
+            <tr class="product_brand">
+                <th scope="row"><span style="font-size:12px;color:#555555;">브랜드</span></th>
+                <td><span style="font-size:12px;color:#555555;">{{product.brand}}</span></td>
+            </tr>
+            <tr class="product_size">
+                <th scope="row"><span style="font-size:12px;color:#555555;">사이즈</span></th>
+                <td>
+                    <select>
+                        <option value="">선택</option>
+                        {{#sizes}}
+                            <option>{{size}}</option>
+                        {{/sizes}}
+                    </select>
+                </td>
+            </tr>
+
+            </tbody>
+        </table>
+
         <div class="proBtn">
-            <button class="cart">Add to Cart</button>
-            <button class="buy">Buy Now</button>
-            <button class="heart"><i class="fa-regular fa-heart"></i></button>
+            <div class="line1">
+                <a href="#none" class="Btn-a buy_Btn">Buy Now</a>
+            </div>
+            <div class="line2">
+                <div class="cart_Btn">
+                    <a href="#none" class="Btn-a">Cart</a>
+                </div>
+                <div class="wish_Btn">
+                    <a href="#none" class="Btn-a"><i class="fa-regular fa-heart"></i></a>
+                </div>
+            </div>
+
+
+            <!--
+        <button class="cart">Add to Cart</button>
+        <button class="buy">Buy Now</button>
+        <button class="heart"><i class="fa-regular fa-heart"></i></button> -->
         </div>
     </div>
 </section>
@@ -118,49 +100,99 @@
 </section>
 
 <section id="review" class="section-p1">
-    <div class="review_write">
-        <div class="review_write_form">
-            <div class="review_writing">리뷰 작성 </div>
-            <input type="text" review="">
-        </div>
-        <div class="review_write_star_rating">
-            <button class="star"><i class="fa-regular fa-star"></i></button>
-            <button class="star"><i class="fa-regular fa-star"></i></button>
-            <button class="star"><i class="fa-regular fa-star"></i></button>
-            <button class="star"><i class="fa-regular fa-star"></i></button>
-            <button class="star"><i class="fa-regular fa-star"></i></button>
-        </div>
-        <div class="review_write_img">
-            <button class="review_write_imgBtn">사진 첨부</button>
-        </div>
-        <div class="review_write_Btn">
-            <button class="review_write_applyBtn">완료</button>
-            <button class="review_write_cancleBtn">작성 취소</button>
-        </div>
-    </div>
-
-
     <h2>Review</h2>
-    <div class="review_container">
-        <div class="review_list">
-            <div class="review_nick">닉네임</div>
-            <div class="review_p_info">
-                <div class="review_p_info1"><img src="img/products/n1.jpg"></div>
-                <div class="review_p_info2">상품 이름 | 사이즈 | 컬러 </div>
-            </div>
-            <div class="review_star_rating">
-                <div class="review_star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-            </div>
-            <div class="review_text">너무 예뻐요!</div>
-            <div class="review_photo">리뷰 사진</div>
+    <div class="ReviewList">
+        <table>
+            <thead>
+            <tr>
+                <th style="width:7%;" scope="col"> 번호</th>
+                <th style="width:22%;" scope="col" class="thumb">상품정보</th>
+                <th style="width:auto;" scope="col">제목</th>
+                <th style="width:15%;" scope="col">작성자</th>
+                <th style="width:15%;" scope="col" class="">작성일</th>
+                <th style="width:7%;" scope="col" class="">조회수</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="num">5</td>
+                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="subject">
+                    <a href="review_detail.html" style="color:#555555;">ar피팅하고 샀더니 딱 맞아요~</a>
+                </td>
+                <td class="writer">닉네임5</td>
+                <td class="txtLess ">2022-08-02</td>
+                <td class="txtLess ">109</td>
+            </tr>
+            <tr>
+                <td class="num">4</td>
+                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="subject">
+                    <a href="review_detail.html" style="color:#555555;">사이즈 잘 맞고 예뻐요</a>
+                </td>
+                <td class="writer">닉네임4</td>
+                <td class="txtLess ">2022-08-02</td>
+                <td class="txtLess ">223</td>
+            </tr>
+            <tr>
+                <td class="num">3</td>
+                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="subject">
+                    <a href="review_detail.html" style="color:#555555;">친구 선물로 사줬는데 엄청 좋아해요!</a>
+                </td>
+                <td class="writer">닉네임3</td>
+                <td class="txtLess ">2022-08-02</td>
+                <td class="txtLess ">252</td>
+            </tr>
+            <tr>
+                <td class="num">2</td>
+                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="subject">
+                    <a href="review_detail.html" style="color:#555555;">후기</a>
+                </td>
+                <td class="writer">닉네임2</td>
+                <td class="txtLess ">2022-08-02</td>
+                <td class="txtLess ">197</td>
+            </tr>
+            <tr>
+                <td class="num">1</td>
+                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="subject">
+                    <a href="review_detail.html" style="color:#555555;">만족해요</a>
+                </td>
+                <td class="writer">닉네임1</td>
+                <td class="txtLess ">2022-08-02</td>
+                <td class="txtLess ">88</td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
+
+    <div class="wrap">
+        <div class="review_writeBtn">
+            <input type="writeBtn" value="리뷰 쓰기" name="" onclick="location.href='review.html';">
         </div>
     </div>
+
+    <div class="page">
+        <div class="left">
+            <a href="?board_no=4&amp;page=2">
+                <i class="fa-solid fa-angle-left"></i></a>
+        </div>
+        <div class="center">
+            <li class="xans-record-"><a href="?board_no=4&amp;page=1" class="other">1</a></li>
+            <li class="xans-record-"><a href="?board_no=4&amp;page=2" class="other">2</a></li>
+            <li class="xans-record-"><a href="?board_no=4&amp;page=3" class="this">3</a></li>
+            <li class="xans-record-"><a href="?board_no=4&amp;page=4" class="other">4</a></li>
+            <li class="xans-record-"><a href="?board_no=4&amp;page=5" class="other">5</a></li>
+        </div>
+        <div class="right">
+            <a href="?board_no=4&amp;page=4">
+                <i class="fa-solid fa-angle-right"></i></a>
+        </div>
+    </div>
+
 </section>
 
 <footer class="section-p1">
