--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -1,75 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Web Tutorial</title>
+{{>layout/header}}
 
-    <!-- 구글 폰트 적용-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <!-- 아이콘 사용 링크-->
-    <script src="https://kit.fontawesome.com/2a811fae19.js" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-<section id="header">
-    <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
-
-    <div>
-        <ul id = "navbar">
-            <li><a href="/">Home</a></li>
-
-            <li><a class="active">Shop</a>
-                <div class="sub-bar">
-                    <ul>
-                        <li><a href="/brands/romanticcrown">ROMANTIC CROWN</a></li>
-                        <li><a href="/brands/apoc">APIECEOFCAKE</a></li>
-                        <li><a href="/brands/mardimercredi">MARDI MERCREDI</a></li>
-                        <li><a href="/brands/luvistrue">LUV IS TRUE</a></li>
-                        <li><a href="/brands/lee">LEE</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li><a href="../arfitting.html">AR Fitting</a></li>
-            <li><a href="../foryou.html">For You</a></li>
-            <li><a href="../about.html">About</a></li>
-            <li id="loginicon"><a href="../login.html"><i class="fa-solid fa-user"></i></a></li>
-            <!-- <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li> -->
-            <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
-        </ul>
-    </div>
-    <div id="tab">
-        <a href="../login.html"><i class="fa-solid fa-user"></i></a>
-        <i id="bar" class="fa-solid fa-bars"></i>
-    </div>
-</section>
-
-<section id="login-area">
+<section id="signup-area">
     <div class="contentBx">
         <div class="formBx">
             <h2>Sign Up</h2>
             <form action="/users/signup" name="user" method="POST">
                 <div class="inputBx">
-                    <span>* </span>
-                    <input type="text" >
-                </div>
-                <div class="inputBx">
                     <span>이메일 * </span>
                     <input type="text" value="{{email}}">
-                </div>
-                <div class="inputBx">
-                    <span>아이디 *</span>
-                    <input type="text">
-                </div>
-                <div class="inputBx">
-                    <span>비밀번호 *</span>
-                    <input type="text">
                 </div>
                 <div class="inputBx">
                     <span>이름 *</span>
@@ -77,19 +15,19 @@
                 </div>
                 <div class="inputBx">
                     <span>키 *</span>
-                    <input type="text" name="height">cm
+                    <input type="text" name="height" placeholder="숫자만 입력하세요. ex) 160.3cm -> 160.3">cm
                 </div>
                 <div class="inputBx">
                     <p>* AR 피팅을 위해 정확한 정보를 입력해주세요.</p>
                 </div>
                 <div class="inputBx">
                     <span>몸무게 *</span>
-                    <input type="text" name="weight">kg
+                    <input type="text" name="weight" placeholder="숫자만 입력하세요. ex) 50.5kg -> 50.5">kg
                 </div>
                 <div class="inputBx">
                     <p>* AR 피팅을 위해 정확한 정보를 입력해주세요.</p>
                 </div>
-                <div class="inputBx">
+                <div class="signupinputBx">
                     <input type="submit" value="Sign Up" />
                 </div>
             </form>
@@ -97,30 +35,4 @@
     </div>
 </section>
 
-<footer class="section-p1">
-    <div class="col">
-        <img class="logo" src="/img/logo.png" alt="" width="100px">
-        <h4>Contact</h4>
-        <p><strong>Address: </strong>나바타</p>
-        <p><strong>Phone: </strong>0123456789</p>
-        <p><strong>Github: </strong>git address</p>
-    </div>
-
-    <div class="col">
-        <h4>About</h4>
-        <a href="#">About us</a>
-        <a href="#">Delivery Informatiion</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms & Conditions</a>
-        <a href="#">Contact us</a>
-    </div>
-
-    <div class="copyright">
-        <p> Copyright ©  </p>
-    </div>
-</footer>
-
-
-<script src="/js/app/script.js"></script>
-</body>
-</html>
+{{>layout/footer}}
