0826 상품 정렬 수정

--- a/src/main/resources/templates/lee.mustache
+++ b/src/main/resources/templates/lee.mustache
@@ -4,7 +4,7 @@
     <div class="sidebar">
         <div class="text">LEE</div>
         <ul>
-            <li><a href="/brands/apoc">전체</a></li>
+            <li><a href="/brands/lee">전체</a></li>
             <li>
                 <a href="/brands/lee/001">상의</a>
                 <ul>
