--- a/src/main/resources/templates/luvistrue.mustache
+++ b/src/main/resources/templates/luvistrue.mustache
@@ -4,7 +4,7 @@
     <div class="sidebar">
         <div class="text">LUV IS TRUE</div>
         <ul>
-            <li><a href="/brands/apoc">전체</a></li>
+            <li><a href="/brands/luvistrue">전체</a></li>
             <li>
                 <a href="/brands/luvistrue/001">상의</a>
                 <ul>
