--- a/src/main/resources/templates/romanticcrown.mustache
+++ b/src/main/resources/templates/romanticcrown.mustache
@@ -4,7 +4,7 @@
     <div class="sidebar">
         <div class="text">ROMANTIC CROWN</div>
         <ul>
-            <li><a href="/brands/apoc">전체</a></li>
+            <li><a href="/brands/romanticcrown">전체</a></li>
             <li>
                 <a href="/brands/romanticcrown/001">상의</a>
                 <ul>
