--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -14,6 +14,8 @@
     <!-- 아이콘 사용 링크-->
     <script src="https://kit.fontawesome.com/2a811fae19.js" crossorigin="anonymous"></script>
 
+    <script src="/js/app/index.js"></script>
+
     <script>
     function addList(url){ // jQuery 방식으로 수정하기..
 
@@ -22,6 +24,7 @@
         form.method = "post";
         document.body.appendChild(form);
         form.submit();
+        alert("찜 목록에 상품을 등록했습니다!"); // --> 이거는 리다이렉션 되고 나서 해야 할 듯..
 
     }
     </script>
@@ -42,7 +45,7 @@
                     <ul>
                         <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
                         <li><a href="/brands/apoc">A PIECE OF CAKE</a></li>
-                        <li><a href="/brands/mardimercredi">MADRI MERCREDI</a></li>
+                        <li><a href="/brands/mahagrid">mahagrid</a></li>
                         <li><a href="/brands/luvistrue">LUVISTRUE</a></li>
                         <li><a href="/brands/lee">lee</a></li>
                     </ul>
