--- a/src/main/resources/templates/mypage.mustache
+++ b/src/main/resources/templates/mypage.mustache
@@ -21,6 +21,10 @@
                     <div class="text"><a href="/users/cart">장바구니 </a></div>
                     <div class="icon"><i class="fa-solid fa-angles-right"></i></div>
                 </div>
+                <div class="menu1">
+                    <div class="text"><a href="/users/cart">장바구니 </a></div>
+                    <div class="icon"><i class="fa-solid fa-angles-right"></i></div>
+                </div>
             </div>
         </div>
     </div>
