--- a/src/main/resources/templates/mypage.mustache
+++ b/src/main/resources/templates/mypage.mustache
@@ -22,7 +22,7 @@
                     <div class="icon"><i class="fa-solid fa-angles-right"></i></div>
                 </div>
                 <div class="menu1">
-                    <div class="text"><a href="/users/cart">장바구니 </a></div>
+                    <div class="text"><a href="/users/review">리뷰 작성 </a></div>
                     <div class="icon"><i class="fa-solid fa-angles-right"></i></div>
                 </div>
             </div>
