--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -27,6 +27,14 @@
         alert("찜 목록에 상품을 등록했습니다!"); // --> 이거는 리다이렉션 되고 나서 해야 할 듯..
 
     }
+
+    function deleteBtn(url){
+        var form = document.createElement("form");
+        form.action = url;
+        form.method = "post";
+        document.body.appendChild(form);
+        form.submit();
+    }
     </script>
 
     <link rel="stylesheet" href="/css/style.css">
