--- a/src/main/resources/templates/signup-after.mustache
+++ b/src/main/resources/templates/signup-after.mustache
@@ -1,7 +1,6 @@
 {{>layout/header}}
 
-<section id="login-area">
-
+<section id="signupA-area">
     <div class="contentBx">
         <div class="formBx">
             <h2>Sign Up</h2>
