--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1208,7 +1208,7 @@ padding: 0;
 }
 
 #signupA-area .contentBx .formBx {
-    margin-top: -350px;
+    margin-top: 0;
     vertical-align: middle;
 }
 
@@ -1993,11 +1993,10 @@ padding: 0;
 
 
 
+ /* Responsive Wed Settings (1080x1920) */
+ @media (max-width: 1080px) {
 
-
-/* Responsive Wed Settings (Tab) */
-@media (max-width:799px) {
-
+    /* navbar */
     #navbar {
         display: flex;
         flex-direction: column;
@@ -2051,7 +2050,7 @@ padding: 0;
     #navbar .sub-bar ul{
         margin-top: 15px;
         margin-left: -5px;
-        margin-bottom: -10px;
+
     }
 
     #navbar li:hover .sub-bar {
@@ -2082,21 +2081,460 @@ padding: 0;
         text-align: center;
     }
 
-    
+
+    #navbar .sub-bar2{
+        display: none;
+        align-items: center;
+        justify-content: center;
+
+    }
+    #navbar .sub-bar2 ul{
+        margin-top: 15px;
+        margin-left: -5px;
+    }
+
+    #navbar li:hover .sub-bar2 {
+        position:fixed;
+        background-color: #dcc7b0;
+        margin-left: -155px;
+        margin-top: -40px;
+        /* z-index: 1; 맨앞으로 나오게 */
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    #navbar li:hover .sub-bar2 ul li {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: -10px;
+        margin-right: -10px;
+        border-radius: 0;
+        text-align: center;
+        width: 160px;
+    }
+
+    #navbar .sub-bar2 ul li a {
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    /* index page */
+    #hero {
+        height: 100vh;
+    }
+
+    .section-p1 {
+        padding: 40px 90px;
+    }
+
+    #product1 .pro {
+        width: 23%;
+        min-width: 400px;
+        padding: 10px 12px;
+        border: 1px solid #dfdcd3;
+        border-radius: 25px;
+        cursor: pointer;
+        box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+        margin: 15px 0;
+        transition: 0.2s ease;
+        position: relative;
+    }
+
+    /* sign in page */
+
+    #login-area {
+        height: 1500px;
+        border: 0px solid #dcc7b0;
+        box-shadow: none;
+        max-width: 800px;
+    }
+
+    #login-area .contentBx .formBx {
+        width: 100%;
+        margin-bottom: 50px;
+
+    }
+
+    #login-area .contentBx .formBx h2 {
+
+        font-size: 66px;
+        margin-bottom: 70px;
+        border-bottom: 6px solid #083c81;
+        line-height: 84px;
+    }
+
+    #login-area .contentBx .formBx .inputBx {
+        margin-bottom: 60px;
+    }
+
+    #login-area .contentBx .formBx .inputBx span {
+        font-size: 42px;
+        margin-bottom: 15px;
+        display: inline-block;
+        color: #222;
+        font-weight: 300;
+        letter-spacing: 1px;
+    }
+
+    #login-area .contentBx .formBx .inputBx input {
+        width: 100%;
+        height: 100px;
+        padding: 10px 10px;
+        outline: none;
+        font-weight: 400;
+        border: 1px solid #083c81;
+        font-size: 36px;
+        letter-spacing: 1px;
+        color: #222;
+        background: transparent;
+    }
+
+    #login-area .contentBx .formBx .remember {
+        margin-bottom: 60px;
+        color: #575757;
+        font-weight: 400;
+        font-size: 42px;
+    }
+
+    #login-area .contentBx .formBx .inputBx input[type="button"] {
+        font-size: 42px;
+    }
+
+    #login-area .contentBx .formBx .inputBx p {
+        font-size: 38px;
+    }
+
+    #login-area .contentBx .formBx h4 {
+        font-size: 42px;
+        margin: 90px 0 40px;
+    }
+
+    #login-area .contentBx .formBx .scl {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    /* sign up page */
+    #signup-area {
+        height: 1500px;
+        border: 0px solid #dcc7b0;
+        box-shadow: none;
+        max-width: 800px;
+    }
+
+    #signup-area .contentBx .formBx {
+        width: 100%;
+        margin-bottom: 50px;
+        margin-top: 120px;
+
+    }
+
+    #signup-area .contentBx .formBx h2 {
+
+        font-size: 66px;
+        margin-bottom: 70px;
+        border-bottom: 6px solid #083c81;
+        line-height: 84px;
+        margin-top: 330px
+    }
+
+    #signup-area .contentBx .formBx .inputBx {
+        margin-bottom: 60px;
+    }
+
+    #signup-area .contentBx .formBx .inputBx span {
+        font-size: 42px;
+        margin-bottom: 15px;
+        display: inline-block;
+        color: #222;
+        font-weight: 300;
+        letter-spacing: 1px;
+    }
+
+    #signup-area .contentBx .formBx .inputBx input {
+        width: 100%;
+        height: 100px;
+        padding: 10px 10px;
+        outline: none;
+        font-weight: 400;
+        border: 1px solid #083c81;
+        font-size: 36px;
+        letter-spacing: 1px;
+        color: #222;
+        background: transparent;
+    }
+
+    #signup-area .contentBx .formBx .signupinputBx {
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #signup-area .contentBx .formBx .signupinputBx input[type="button"] {
+        background: #083c81;
+        color: #fff;
+        outline: none;
+        border: none;
+        font-weight: 500;
+        font-size: 42px;
+        cursor: pointer;
+        width: 450px;
+        height: 80px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    p {
+        font-size: 26px;
+        color: #465b52;
+        margin: 15px o 20px 0;
+    }
+
+    /* after sign up page */
+    #signupA-area {
+        height: 1500px;
+        border: 0px solid #dcc7b0;
+        box-shadow: none;
+        max-width: 800px;
+    }
+
+    #signupA-area .contentBx .formBx {
+        margin-top: 0;
+        vertical-align: middle;
+        width: 100%;
+    }
+
+    #signupA-area .contentBx .formBx h2 {
+        font-size: 66px;
+        border-bottom: 6px solid #083c81;
+        line-height: 84px;
+        margin-bottom: 70px;
+    }
+
+    #signupA-area .contentBx .formBx form {
+        align-items: center;
+        justify-content: center;
+    }
+
+    #signupA-area .contentBx .formBx .inputBx {
+        margin-bottom: 70px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #signupA-area .contentBx .formBx .inputBx h3{
+        font-size: 36px;
+        text-align: center;
+    }
+
+    #signupA-area .contentBx .formBx input[type="button"] {
+        background: #083c81;
+        color: #fff;
+        outline: none;
+        border: none;
+        font-weight: 500;
+        font-size: 42px;
+        cursor: pointer;
+        width: 450px;
+        height: 80px;
+        justify-content: center;
+        align-items: center;
+        margin-left: 160px;
+    }
+
+
+    /* for you page */
+    #foryou .location {
+        display: none;
+    }
+
+    #foryou .pro {
+        width: 23%;
+        min-width: 400px;
+        padding: 10px 12px;
+        border: 1px solid #dfdcd3;
+        border-radius: 25px;
+        cursor: pointer;
+        box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+        margin: 15px 0;
+        transition: 0.2s ease;
+        position: relative;
+    }
+
+
+
+
+
+ }
+
+
+
+
+/* Responsive Wed Settings (Tab) */
+@media (max-width:799px) {
+
+    /* navbar */
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #dcc7b0;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
+    }
+
+    #navbar.active{
+        right: 0px;
+    }
+
+    #navbar li {
+        margin-bottom: 25px;
+    }
+
+    #tab{
+        display: flex;
+        align-items: center;
+    }
+
+    #tab i{
+        font-size: 24px;
+        color: #575757;
+
+    }
+
+    #close {
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        font-size: 24px;
+        color: #575757;
+    }
+
+    #navbar .sub-bar{
+        display: none;
+        align-items: center;
+        justify-content: center;
+
+    }
+    #navbar .sub-bar ul{
+        margin-top: 15px;
+        margin-left: -5px;
+
+    }
+
+    #navbar li:hover .sub-bar {
+        position:fixed;
+        background-color: #dcc7b0;
+        margin-left: -155px;
+        top: 100px;
+        /* z-index: 1; 맨앞으로 나오게 */
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    #navbar li:hover .sub-bar ul li {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: -10px;
+        margin-right: -10px;
+        border-radius: 0;
+        text-align: center;
+        width: 160px;
+    }
+
+    #navbar .sub-bar ul li a {
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+
+    #navbar .sub-bar2{
+        display: none;
+        align-items: center;
+        justify-content: center;
+
+    }
+    #navbar .sub-bar2 ul{
+        margin-top: 15px;
+        margin-left: -5px;
+    }
+
+    #navbar li:hover .sub-bar2 {
+        position:fixed;
+        background-color: #dcc7b0;
+        margin-left: -155px;
+        margin-top: -40px;
+        /* z-index: 1; 맨앞으로 나오게 */
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    #navbar li:hover .sub-bar2 ul li {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: -10px;
+        margin-right: -10px;
+        border-radius: 0;
+        text-align: center;
+        width: 160px;
+    }
+
+    #navbar .sub-bar2 ul li a {
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    /* index.html */
+    #product1 {
+        text-align: center;
+    }
+
+    .section-p1 {
+        padding: 40px 90px;
+    }
+
+    #product1 .pro {
+        width: 23%;
+        min-width: 250px;
+        padding: 10px 12px;
+        border: 1px solid #dfdcd3;
+        border-radius: 25px;
+        cursor: pointer;
+        box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+        margin: 15px 0;
+        transition: 0.2s ease;
+        position: relative;
+    }
+
+    /* after sign up page  */
+    #signupA-area .contentBx .formBx {
+        margin-top: 0;
+        vertical-align: middle;
+    }
+
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -2193,30 +2631,287 @@ padding: 0;
 }
 
 
- /* Responsive Wed Settings (phone) 
+ /* Responsive Wed Settings (phone) */
 @media (max-width: 477px) {
 
-    .section-p1 {
-        padding: 20px;
+    #header img {
+        margin-left: -55px;
     }
 
-    #header {
-        padding: 10px 20px;
-  
-    }
-    
-    #hero {
-        padding: 0 20px;
-        background-position: top 30% right 50%;
+    /* navbar */
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 195px;
+        background-color: #dcc7b0;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
     }
 
-    #product1 .pro-container {
+    #navbar.active{
+        right: 0px;
+    }
+
+    #navbar li {
+        margin-bottom: 25px;
+    }
+
+    #tab{
+        display: flex;
+        align-items: center;
+        margin-right: -50px;
+    }
+
+    #tab i{
+        font-size: 24px;
+        color: #575757;
+
+    }
+
+    #close {
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        font-size: 24px;
+        color: #575757;
+    }
+
+    #navbar .sub-bar{
+        display: none;
+        align-items: center;
         justify-content: center;
+
+    }
+    #navbar .sub-bar ul{
+        margin-top: 15px;
+        margin-left: -5px;
+
+    }
+
+    #navbar li:hover .sub-bar {
+        position:fixed;
+        background-color: #dcc7b0;
+        margin-left: -155px;
+        top: 100px;
+        /* z-index: 1; 맨앞으로 나오게 */
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    #navbar li:hover .sub-bar ul li {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: -10px;
+        margin-right: -10px;
+        border-radius: 0;
+        text-align: center;
+        width: 160px;
+    }
+
+    #navbar .sub-bar ul li a {
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+
+    #navbar .sub-bar2{
+        display: none;
+        align-items: center;
+        justify-content: center;
+
+    }
+    #navbar .sub-bar2 ul{
+        margin-top: 15px;
+        margin-left: -5px;
+    }
+
+    #navbar li:hover .sub-bar2 {
+        position:fixed;
+        background-color: #dcc7b0;
+        margin-left: -155px;
+        margin-top: -40px;
+        /* z-index: 1; 맨앞으로 나오게 */
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    #navbar li:hover .sub-bar2 ul li {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: -10px;
+        margin-right: -10px;
+        border-radius: 0;
+        text-align: center;
+        width: 160px;
+    }
+
+    #navbar .sub-bar2 ul li a {
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    /*인덱스 화면 상품 크기*/
+
+    #product1 {
+        text-align: center;
+    }
+
+    .section-p1 {
+        padding: 40px 15px;
     }
 
     #product1 .pro {
-        margin: 0 0 15px 0;
+        width: 23%;
+        min-width: 165px;
+        padding: 10px 12px;
+        border: 1px solid #dfdcd3;
+        border-radius: 25px;
+        cursor: pointer;
+        box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+        margin: 15px 0;
+        transition: 0.2s ease;
+        position: relative;
     }
 
-} 
-*/
+    #product1 .pro .fa-adn {
+        width: 35px;
+        height: 35px;
+        line-height: 30px;
+        border-radius: 50px;
+        background-color: #f7f3e7;
+        font-weight: 500;
+        color: #083c81;
+        border: 1px solid #eae4d3;
+        position: absolute;
+        bottom: 7px;
+        right: 7px;
+    }
+
+    /* for you paga */
+    #foryou .location {
+        margin-top: 0px;
+        display: none;
+    }
+
+    #foryou h2 {
+
+    }
+
+    #foryou {
+        text-align: center;
+    }
+
+    #foryou .section-p1 {
+        padding: 40px 15px;
+
+    }
+
+
+    #foryou .pro-container {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 1px;
+        flex-wrap: wrap;
+    }
+
+    #foryou .pro {
+        width: 23%;
+        min-width: 165px;
+        padding: 10px 12px;
+        border: 1px solid #dfdcd3;
+        border-radius: 25px;
+        cursor: pointer;
+        box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+        margin: 15px 0;
+        transition: 0.2s ease;
+        position: relative;
+    }
+
+    #foryou .pro .fa-adn {
+        width: 35px;
+        height: 35px;
+        line-height: 30px;
+        border-radius: 50px;
+        background-color: #f7f3e7;
+        font-weight: 500;
+        color: #083c81;
+        border: 1px solid #eae4d3;
+        position: absolute;
+        bottom: 7px;
+        right: 7px;
+    }
+
+
+
+
+    /* sign in page */
+    #login-area {
+        border: 0px solid #dcc7b0;
+        margin-top: 0px;
+    }
+
+    /* sign up page */
+    #signup-area {
+        position: relative;
+        width: 100%;
+        height: 70vh;
+        display: flex;
+        max-width: 600px;
+        height: 650px;
+        width: 100%;
+        background: #fff;
+
+        padding: 10px 12px;
+        border: 0px solid #dcc7b0;
+        border-radius: 25px;
+        box-shadow: 20px 20px 30px rgb(0 0 0 / 2%);
+        margin-top: 50px;
+    }
+
+    #signup-area .contentBx .formBx h2 {
+        margin-top: 55px;
+    }
+
+    /* after sign up page  */
+    #signupA-area {
+
+        border: 0px solid #dcc7b0;
+
+    }
+
+    #signupA-area .contentBx {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        /* overflow: auto; */
+    }
+
+    #signupA-area {
+
+    height: 440px;
+    margin-top: 50px;
+    }
+
+    #signupA-area .contentBx .formBx {
+        margin-top: -100px;
+    }
+
+}
+
+
