--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -19,7 +19,7 @@
             </div>
         </div>
         {{#product.ARFitting}}
-            <a href="#"><i class="fa-brands fa-adn"></i></a>
+            <a href="/arfitting/{{product.productNo}}"><i class="fa-brands fa-adn"></i></a>
         {{/product.ARFitting}}
     </div>
 
