--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,4 +1,48 @@
-{{>layout/header}}
+{{>layout/head}}
+</head>
+
+<body>
+<section id="header">
+    <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
+    <div class="index-header-icon">
+        <a href="/" id="indexhome"><i class="fa-solid fa-house"></i></a>
+    </div>
+    <div>
+        <ul id="navbar">
+            <li><a class="active" href="/">Home</a></li>
+
+            <li><a>Shop</a>
+                <div class="sub-bar">
+                    <ul>
+                        <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
+                        <li><a href="/brands/apoc">A PIECE OF CAKE</a></li>
+                        <li><a href="/brands/mahagrid">mahagrid</a></li>
+                        <li><a href="/brands/luvistrue">LUVISTRUE</a></li>
+                        <li><a href="/brands/lee">lee</a></li>
+                    </ul>
+                </div>
+            </li>
+
+            <li><a href="/html/arfitting.html">AR Fitting</a></li>
+            <li><a href="/html/foryou.html">For You</a></li>
+            <li><a href="/html/about.html">About</a></li>
+
+            <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
+                <div class="sub-bar2">
+                    <ul>
+                        <li><a href="/users/signin">SIGN IN</a></li>
+                        <li><a href="/users/mypage">MY PAGE</a></li>
+                    </ul>
+                </div>
+            </li>
+
+            <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
+        </ul>
+    </div>
+    <div id="indextab">
+        <i id="bar" class="fa-solid fa-bars"></i>
+    </div>
+</section>
 
 <section id="hero">
     <h4>Trade-in-offer</h4>
