--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -23,7 +23,7 @@
 </footer>
 
 
-<script src="/js/app/script.js"></script>
+<script src="/jsapp/script.js"></script>
 <script>
     const bar = document.getElementById('bar');
     const nav = document.getElementById('navbar');
@@ -42,23 +42,6 @@
         })
     }
 
-    /* 리뷰 별 선택하기 */
-    const allStars = document.querySelectorAll('.star');
-
-            allStars.forEach((star, i) => {
-                star.onclick = function () {
-                    let current_star_level = i + 1;
-
-                    allStars.forEach((star, j) => {
-                        if (current_star_level >= j + 1) {
-                        star.innerHTML = '<i class="fa-solid fa-star"></i>';
-                    } else {
-                        star.innerHTML = '<i class="fa-regular fa-star"></i>';
-                    }
-
-                    })
-                }
-            })
-    </script>
+</script>
 </body>
 </html>
