--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -1,82 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAVATAR</title>
-
-    <!-- 구글 폰트 적용-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <!-- 아이콘 사용 링크-->
-    <script src="https://kit.fontawesome.com/2a811fae19.js" crossorigin="anonymous"></script>
-
-    <script src="/js/app/index.js"></script>
-
-    <script>
-    function addList(url){ // jQuery 방식으로 수정하기..
-
-        var form = document.createElement("form");
-        form.action = url;
-        form.method = "post";
-        document.body.appendChild(form);
-        form.submit();
-        alert("찜 목록에 상품을 등록했습니다!"); // --> 이거는 리다이렉션 되고 나서 해야 할 듯..
-
-    }
-
-    function deleteBtn(url){
-        var form = document.createElement("form");
-        form.action = url;
-        form.method = "post";
-        document.body.appendChild(form);
-        form.submit();
-    }
-    </script>
-
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/shop.css">
 </head>
 <body>
 <section id="header">
     <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
-
-    <div>
-        <ul id="navbar">
-            <li><a class="active" href="/">Home</a></li>
-
-            <li><a>Shop</a>
-                <div class="sub-bar">
-                    <ul>
-                        <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
-                        <li><a href="/brands/apoc">A PIECE OF CAKE</a></li>
-                        <li><a href="/brands/mahagrid">mahagrid</a></li>
-                        <li><a href="/brands/luvistrue">LUVISTRUE</a></li>
-                        <li><a href="/brands/lee">lee</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li><a href="/html/arfitting.html">AR Fitting</a></li>
-            <li><a href="/html/foryou.html">For You</a></li>
-            <li><a href="/html/about.html">About</a></li>
-
-            <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
-                <div class="sub-bar2">
-                    <ul>
-                        <li><a href="/users/signin">SIGN IN</a></li>
-                        <li><a href="/users/mypage">MY PAGE</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
-        </ul>
+    <div class="header-icon">
+        <i class="fa-solid fa-arrow-left" onClick="history.go(-1)"></i>
+        <a href="/" id="home"><i class="fa-solid fa-house"></i></a>
     </div>
-    <div id="tab">
-        <i id="bar" class="fa-solid fa-bars"></i>
-    </div>
-</section>
+{{>layout/nav}}
